@startuml

title __DASHBOARD's Class Diagram__\n

  namespace com.example.test_2 {
    namespace ui.dashboard {
      class com.example.test_2.ui.dashboard.DashboardFragment {
          - button_login : Button
          - et_psw : EditText
          - et_user : EditText
          - flag_login : boolean
          - psw : String
          - qrb_history : QMUIRoundButton
          - qrb_quit : QMUIRoundButton
          - spPsw : String
          - tv_register : TextView
          - tv_usr : TextView
          - userName : String
          + onActivityCreated()
          + onActivityResult()
          + onCreateView()
          - afterLogin()
          - init()
          - readPsw()
          - saveLoginStatus()
      }
    }
  }
  

  namespace com.example.test_2 {
    namespace ui.dashboard {
      class com.example.test_2.ui.dashboard.DashboardViewModel {
          - mText : MutableLiveData<String>
          + DashboardViewModel()
          + getText()
      }
    }
  }
  

  namespace com.example.test_2 {
    namespace ui.dashboard {
      class com.example.test_2.ui.dashboard.MD5Utils {
          {static} + md5()
      }
    }
  }
  

  namespace com.example.test_2 {
    namespace ui.dashboard {
      class com.example.test_2.ui.dashboard.RegisterActivity {
          - Sex : RadioGroup
          - et_psw : EditText
          - et_psw_again : EditText
          - et_user_name : EditText
          - psw : String
          - pswAgain : String
          - userName : String
          # onCreate()
          - getEditString()
          - init()
          - isExistUserName()
          - saveRegisterInfo()
      }
    }
  }
  

  com.example.test_2.ui.dashboard.DashboardFragment -up-|> androidx.fragment.app.Fragment
  com.example.test_2.ui.dashboard.DashboardFragment o-- com.example.test_2.ui.dashboard.DashboardViewModel : dashboardViewModel
  com.example.test_2.ui.dashboard.DashboardViewModel -up-|> androidx.lifecycle.ViewModel
  com.example.test_2.ui.dashboard.RegisterActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
